[package]
name = "sp-partner-chains-session"
version = "1.1.0"
license = "Apache-2.0"
description = "Primitives for partner chains sessions"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-staking = { workspace = true }

[features]
default = [ "std" ]
std = [
	"sp-staking/std",
]
